general additions and fixes to index and app.jss. Attempted to add pie chart, but not showing up yet.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+
+main {
+display: flex;
+}
+
 #displayImg1 {
   display: inline-block;
   max-width: 200px;
